--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build": "npm install",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "db_schema": "psql -U postgres -f db/schema.sql",
+    "db_seed": "psql -U postgres -f db/seed.sql"
   },
   "author": "Dwayne A. Jones",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.17.1",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.2",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4"
   }
 }
