--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^4.17.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
