added joi test files

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "pg-promise": "^11.5.4"
   },
   "devDependencies": {
+    "chai": "^4.3.10",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
   }
 }
