--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.17.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-generator": "^3.1.0",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
   },
