--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon server.js",
     "test": "mocha",
     "db_schema": "psql -U postgres -f db/schema.sql",
-    "db_seed": "psql -U postgres -f db/seed.sql"
+    "db_seed": "psql -U postgres -f db/seed.sql",
+    
   },
   "author": "Dwayne A. Jones",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-generator": "^3.1.0",
     "nodemailer": "^6.9.7",
+    "opentok": "^2.17.0",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
   },
