--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "npm install",
     "start": "nodemon server.js",
     "test": "mocha",
-    "db_schema": "psql -U postgres -f db/schema.sql",
-    "db_seed": "psql -U postgres -f db/seed.sql"
+    "schema": "psql -U postgres -f db/schema.sql",
+    "seed": "psql -U postgres -f db/seed.sql"
   },
   "author": "Dwayne A. Jones",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "chai-joi": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.17.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
