--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-generator": "^3.1.0",
     "morgan": "^1.10.0",
+    "nanoid": "^5.0.4",
     "nodemailer": "^6.9.7",
     "opentok": "^2.17.0",
     "pg": "^8.11.3",
